# AIPlatformEnv

./: .dockerignore  Dockerfile  Key Requirements at a Glance.md  README.md  TESTING.md  __init__.py  client.py  data.py  env.py  evaluation criteria.md  idea.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  round1.docx  tasks.py  update_data.py
server/: app.py
