[project]
name = "aiplatformenv"
version = "1.0.0"
description = "AIPlatformEnv OpenEnv Environment"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0"
]

[project.scripts]
server = "server.app:main"
